# pymc-rust-ai-compiler

./: .gitignore  README.md  pyproject.toml  python  test_mlx.py  test_mlx_vs_cpu.py
.github/workflows/: ci.yml  code-style.yaml
bench_runner/: Cargo.toml
bench_runner/src/: lib.rs
benchmarks/: results.json  run_benchmarks.py
compiled_models/celeri/: geologic_bounds_data.npy  station_velocity_data.npy  x_0_data.npy  x_1_data.npy  x_3_data.npy  x_4_data.npy  x_5_data.npy  x_6_data.npy  x_7_data.npy
compiled_models/celeri/src/: data.rs  generated.rs
compiled_models/gp/src/: ffi.rs
compiled_models/gp_accelerate_200/src/: data.rs  generated.rs
compiled_models/gp_cpu_200/: Cargo.toml  x_0_data.npy  x_1_data.npy  y_data.npy
compiled_models/gp_cpu_200/src/: generated.rs  (+1 more)
compiled_models/gp_mlx_test/: Cargo.toml
compiled_models/hierarchical/: results.tsv  x_0_data.npy  x_1_data.npy  y_data.npy
compiled_models/linreg/: Cargo.toml  x_0_data.npy  y_data.npy
compiled_models/normal/: Cargo.toml  results.tsv  y_data.npy
compiled_models/zerosumnormal/: x_0_data.npy  x_1_data.npy  x_2_data.npy  y_data.npy
examples/: 01_normal.py  02_linear_regression.py  03_hierarchical.py  04_zerosumnormal.py  05_celeri_simplified.py  bench_logp.py  generate_blog_plots.py  jax_to_pytorch_mlp.py  mingpt_to_rust.py  pytorch_to_jax_mlp.py  pytorch_to_rust_mlp.py  run_benchmark.py  stan_01_normal.py  stan_02_hierarchical.py  stan_pymc_01_normal.py  stan_pymc_02_hierarchical.py
examples/mingpt_enzyme/: validate_pytorch.py
notebooks/: overview.py
pymc_rust_compiler/: __init__.py  analysis.py  benchmark.py  compiler.py  exporter.py  jax_pytorch_transpiler.py  nutpie_bridge.py  pytorch_exporter.py  pytorch_rust_transpiler.py  stan_compiler.py  stan_exporter.py  stan_to_pymc.py
pymc_rust_compiler/skills/: gp_accelerate.md  gp_mlx.md  pymc_optimization.md  pytorch_to_rust_burn.md  stan_to_pymc.md
tests/: conftest.py  test_compiler.py  test_exporter.py  test_jax_pytorch.py  test_pytorch_rust.py
transalchemy/: __init__.py  analysis.py  cli.py  compiler.py  jax_exporter.py  jax_pytorch_transpiler.py  nutpie_bridge.py  pytorch_exporter.py  pytorch_rust_transpiler.py  stan_compiler.py  stan_to_pymc.py
transalchemy/skills/: enzyme.md  gp_cuda.md  jax_to_pytorch.md  pytorch_to_jax.md  pytorch_to_rust_burn.md  stan_to_pymc.md  zerosumnormal.md
transpailer/: __init__.py  analysis.py  benchmark.py  cli.py  compiler.py  exporter.py  formatting.py  jax_exporter.py  jax_pytorch_transpiler.py  nutpie_bridge.py  pytorch_exporter.py  pytorch_rust_transpiler.py  stan_compiler.py  stan_exporter.py  stan_to_pymc.py
transpailer/skills/: gp.md  pytorch_to_rust.md  stan.md  stan_to_pymc.md
(+14 files in other folders)
