[project]
name = "pymc-rust-compiler"
version = "0.1.0"
description = "AI-powered PyMC model compiler: PyTensor → optimized Rust via LLM"
authors = [{name = "Thomas Wiecki", email = "thomas.wiecki@pymc-labs.com"}]
requires-python = ">= 3.11"
dependencies = [
    "pymc>=5.28",
    "nutpie>=0.16",
    "anthropic>=0.52",
    "numpy",
    "marimo>=0.20.4",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "ruff"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["pymc_rust_compiler"]
