[project]
name = "transalchemy"
version = "0.1.0"
description = "The Transalchemy: an AI agent that transpiles between any computational framework via LLM"
authors = [{name = "Thomas Wiecki", email = "thomas.wiecki@pymc-labs.com"}]
requires-python = ">= 3.11"
dependencies = [
    "pymc>=5.28",
    "nutpie>=0.16",
    "anthropic>=0.52",
    "numpy",
    "marimo>=0.20.4",
    "bridgestan>=2.7.0",
    "torch>=2.10.0",
    "click>=8.0",
    "cmdstanpy>=1.3.0",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "ruff"]
jax = ["jax>=0.4", "jaxlib>=0.4"]
torch = ["torch>=2.0"]
dl = ["jax>=0.4", "jaxlib>=0.4", "torch>=2.0"]

[project.scripts]
transalchemy = "transalchemy.cli:cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["transalchemy"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
